--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -51,7 +51,7 @@ deflection of the discretized structure undergoing bending is given by
   Balancing the moment acting across the tip and root of the \(i^{th}\) rigid element gives us the torsional rotation of the \(i^{th}\) 
 spring as
 <br>  
- \[ θ_i = \frac{P(l_n - x_i)}{k_θ}\] 
+ \[ θ_i = \frac{P(l_n - x_i)}{k_\theta}\] 
 <br>  
   Assuming small angles and neglecting the effect of geometric foreshortening under large deflections, the effective linear tip 
 stiffness of the discretized structure is given by \(K_l\). This can be further equated to the linear tip stiffness of an equivalent 
