--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -57,7 +57,7 @@ spring as
 stiffness of the discretized structure is given by \(K_l\). This can be further equated to the linear tip stiffness of an equivalent 
 beam of length \(l_h\) and with the same cantilevered boundary conditions
 <br>
-\[ K_l = \frac{P}{δ_{n_h}} = \frac{3\overline{EI_e}}{{l_h}^3} = \frac{6k_\theta}{l_r[ 3 l_h n_h (n_h + 1) - l_r (n_h - 1) n_h (n_h+1)]} \]
+\[ K_l = \frac{P}{δ_{n_h}} \]
 <br>
   Thus, the effective bending rigidity of the flexure segment, \(\overline {EI_e}\) can now be written as
 <br>
