--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -55,7 +55,7 @@ spring as
 <br>  
   Assuming small angles and neglecting the effect of geometric foreshortening under large deflections, the effective linear tip 
 stiffness of the discretized structure is given by \(K_l\). This can be further equated to the linear tip stiffness of an equivalent 
-beam of length \(l_h\) and with the same cantilevered boundary conditions
+beam of length  and with the same cantilevered boundary conditions
 <br>
 \[ K_l = \frac{P}{δ_{n_h}} = \frac{3\overline{EI_e}}{{l_h}^3} = \frac{6k_\theta}{1}\]
 <br>
