--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -55,9 +55,9 @@ spring as
 <br>  
   Assuming small angles and neglecting the effect of geometric foreshortening under large deflections, the effective linear tip 
 stiffness of the discretized structure is given by \(K_l\). This can be further equated to the linear tip stiffness of an equivalent 
-beam of length  and with the same cantilevered boundary conditions
+beam of length xx and with the same cantilevered boundary conditions
 <br>
-\[ K_l = \frac{P}{δ_{n_h}} = \frac{3\overline{EI_e}}{{l_h}^3} = \frac{6k_\theta}{1}\]
+\[ K_l = \frac{P}{δ_{n_h}} = \frac{3EI_e}{{l_h}^3} = \frac{6k_\theta}{1}\]
 <br>
   Thus, the effective bending rigidity of the flexure segment, \(\overline {EI_e}\) can now be written as
 <br>
