--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -61,7 +61,7 @@ beam of length xx and with the same cantilevered boundary conditions
 <br>
   Thus, the effective bending rigidity of the flexure segment, \(\overline {EI_e}\) can now be written as
 <br>
-
+\[ \overline {EI_e} = \frac{2k_\theta{l_h}^3}{l_r n_h (n_h + 1)(3 l_h - l_r(n_h - 1)) } \]
 <br>
   This equation is useful as it relates the geometric properties of the flexure hinge to that of the bending rigidity of this segment, 
 facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
