--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -38,7 +38,7 @@ the out-of-plane bending rigidity of the structure, a series of patterned cuts a
 flexure segment and dividing the structure into a ‘beam segment’ upstream and a ‘flap segment’ downstream. Compared to previous modal 
 convergence flutter energy harvesters, which used a discrete pin or ball-bearing hinge assembly between a beam.
 <br>
-<img src="assets/images/Project1_image1.png" alt="Image1" style="width:600px;">   
+<img src="assets/images/Project1_image1.png" align="middle" alt="Image1" style="width:600px;">   
 <br>  
   In order to derive the effective bending rigidity, the patterned flexure segment of length \(l_h\) is discretized into \(n_h\) rigid 
 links each having an elemental length of \(l_r\). Each of these elemental links is connected to the preceding link with a rotational 
@@ -67,7 +67,7 @@ beam of length xx and with the same cantilevered boundary conditions
 facilitating the tuning of the flexure segment to affect the desired natural frequencies of the entire structure.
 <br>
 
-  <img src="assets/images/Image2.jpg" alt="Image2" style="width:400px">
+  <img src="assets/images/Image2.jpg" align="middle" alt="Image2" style="width:400px">
 
 <br>      
 Note: Parts of this except is taken from the following publication:
