--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -21,7 +21,7 @@ order: 4
 <div align="left"><h3><a href = "https://doi.org/10.1088/0964-1726/24/9/094007">Modeling fabricating and analyzing a flexure hinge</a></h3></div>
 <div align="left">
 
-  <img src="assets/images/Portfolio.jpg" align="middle" alt="SlideImage" style="width:600px;">
+  <img src="assets/images/Portfolio.jpg" align="middle" alt="SlideImage">
   
  A flexure hinge serves as a connection or a joint between two structural elements. The flexure hinge could provide an alternative to a
 rotary bearing, especially in applications where full rotary motions (i.e. complete 360-degree rotations) are not required. Rolling or 
