--- a/_sections/projects.html
+++ b/_sections/projects.html
@@ -18,13 +18,14 @@ order: 4
   
 <body>
   
-<div align="left"><h3><a href = "https://doi.org/10.1088/0964-1726/24/9/094007">Modeling fabricating and analyzing a flexure hinge</a></h3></div>
+<!---div align="left"><h3><a href = "https://doi.org/10.1088/0964-1726/24/9/094007">Modeling fabricating and analyzing a flexure hinge</a></h3></div--->
+
 <div align="left">
 <br>
   <img src="assets/images/Portfolio.jpg" align="middle" alt="SlideImage">
   
  <br> 
- A flexure hinge serves as a connection or a joint between two structural elements. The flexure hinge could provide an alternative to a
+<!--- A flexure hinge serves as a connection or a joint between two structural elements. The flexure hinge could provide an alternative to a
 rotary bearing, especially in applications where full rotary motions (i.e. complete 360-degree rotations) are not required. Rolling or 
 sliding surfaces are prone to fouling and require periodic maintenance (lubrication). Using a flexure hinge removes the maintenance 
 requirement and reduces the number of assembled parts. 
@@ -70,7 +71,7 @@ facilitating the tuning of the flexure segment to affect the desired natural fre
 
   <img src="assets/images/Image2.jpg" align="middle" alt="Image2" style="width:400px">
 
-<br>      
+<br--->      
 Note: Parts of this except is taken from the following publication:
 <a href = "https://doi.org/10.1088/0964-1726/24/9/094007">Punnag Chatterjee and Matthew Bryant 2015 Smart Mater. Struct. 24 094007</a>
  
